Added Firebase added supabase added agora Added permissions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Required Permissions -->
+    <!-- Permission to access the internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permission to access the camera for video calls -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- Permission to record audio for voice in video calls -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!-- Permission to check network state -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- Optional: Prevent the screen from turning off during video chat -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- Application block -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,17 +26,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OldSchool"
         tools:targetApi="31">
+
+        <!-- Main activity declaration -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.OldSchool">
+
+            <!-- Launcher activity intent filter -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
